; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/ieee1394/extr_iso.c_hpsb_iso_recv_listen_channel.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/ieee1394/extr_iso.c_hpsb_iso_recv_listen_channel.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.hpsb_iso = type { i64, i32, %struct.TYPE_4__* }
%struct.TYPE_4__ = type { %struct.TYPE_3__* }
%struct.TYPE_3__ = type { i32 (%struct.hpsb_iso*, i32, i8)* }

@HPSB_ISO_RECV = common dso_local global i64 0, align 8
@EINVAL = common dso_local global i32 0, align 4
@RECV_LISTEN_CHANNEL = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @hpsb_iso_recv_listen_channel(%struct.hpsb_iso* %0, i8 zeroext %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.hpsb_iso*, align 8
  %5 = alloca i8, align 1
  store %struct.hpsb_iso* %0, %struct.hpsb_iso** %4, align 8
  store i8 %1, i8* %5, align 1
  %6 = load %struct.hpsb_iso*, %struct.hpsb_iso** %4, align 8
  %7 = getelementptr inbounds %struct.hpsb_iso, %struct.hpsb_iso* %6, i32 0, i32 0
  %8 = load i64, i64* %7, align 8
  %9 = load i64, i64* @HPSB_ISO_RECV, align 8
  %10 = icmp ne i64 %8, %9
  br i1 %10, label %20, label %11

11:                                               ; preds = %2
  %12 = load %struct.hpsb_iso*, %struct.hpsb_iso** %4, align 8
  %13 = getelementptr inbounds %struct.hpsb_iso, %struct.hpsb_iso* %12, i32 0, i32 1
  %14 = load i32, i32* %13, align 8
  %15 = icmp ne i32 %14, -1
  br i1 %15, label %20, label %16

16:                                               ; preds = %11
  %17 = load i8, i8* %5, align 1
  %18 = zext i8 %17 to i32
  %19 = icmp sge i32 %18, 64
  br i1 %19, label %20, label %23

20:                                               ; preds = %16, %11, %2
  %21 = load i32, i32* @EINVAL, align 4
  %22 = sub nsw i32 0, %21
  store i32 %22, i32* %3, align 4
  br label %35

23:                                               ; preds = %16
  %24 = load %struct.hpsb_iso*, %struct.hpsb_iso** %4, align 8
  %25 = getelementptr inbounds %struct.hpsb_iso, %struct.hpsb_iso* %24, i32 0, i32 2
  %26 = load %struct.TYPE_4__*, %struct.TYPE_4__** %25, align 8
  %27 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %26, i32 0, i32 0
  %28 = load %struct.TYPE_3__*, %struct.TYPE_3__** %27, align 8
  %29 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %28, i32 0, i32 0
  %30 = load i32 (%struct.hpsb_iso*, i32, i8)*, i32 (%struct.hpsb_iso*, i32, i8)** %29, align 8
  %31 = load %struct.hpsb_iso*, %struct.hpsb_iso** %4, align 8
  %32 = load i32, i32* @RECV_LISTEN_CHANNEL, align 4
  %33 = load i8, i8* %5, align 1
  %34 = call i32 %30(%struct.hpsb_iso* %31, i32 %32, i8 zeroext %33)
  store i32 %34, i32* %3, align 4
  br label %35

35:                                               ; preds = %23, %20
  %36 = load i32, i32* %3, align 4
  ret i32 %36
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
